--- a/project/package.json
+++ b/project/package.json
@@ -10,6 +10,7 @@
     "expo": "^32.0.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-settings-list": "^1.8.0",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
