--- a/project/package.json
+++ b/project/package.json
@@ -16,6 +16,8 @@
     "react-native-slideable-calendar-strip": "^0.3.2",
     "react-native-swipe-gestures": "^1.0.3",
     "react-native-vector-icons": "^6.2.0",
+    "react-native-video": "^4.4.0",
+    "react-native-youtube": "^1.1.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
