--- a/project/package.json
+++ b/project/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "expo": "^32.0.1",
     "faker": "^4.1.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.0.0",
