--- a/project/package.json
+++ b/project/package.json
@@ -7,12 +7,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^32.0.1",
     "faker": "^4.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^1.0.0",
     "react-native-settings-list": "^1.8.0",
     "react-native-slideable-calendar-strip": "^0.3.2",
