--- a/project/package.json
+++ b/project/package.json
@@ -13,7 +13,10 @@
     "moment": "^2.24.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^1.0.0",
+    "react-native-notifications": "^1.3.0",
+    "react-native-push-notification": "^3.1.2",
     "react-native-settings-list": "^1.8.0",
     "react-native-slideable-calendar-strip": "^0.3.2",
     "react-native-swipe-gestures": "^1.0.3",
