--- a/project/package.json
+++ b/project/package.json
@@ -7,26 +7,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.1",
+    "expo": "^32.0.6",
     "faker": "^4.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "react": "16.5.0",
+    "react": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-elements": "^1.0.0",
+    "react-native-credit-card-input": "^0.4.1",
+    "react-native-elements": "^1.1.0",
+    "react-native-reanimated": "^1.0.0-alpha.12",
     "react-native-settings-list": "^1.8.0",
     "react-native-slideable-calendar-strip": "^0.3.2",
     "react-native-swipe-gestures": "^1.0.3",
-    "react-native-vector-icons": "^6.3.0",
+    "react-native-vector-icons": "^6.4.2",
     "react-native-video": "^4.4.0",
     "react-native-youtube": "^1.1.0",
-    "react-navigation": "^3.4.0",
-    "react-redux": "^6.0.0",
+    "react-navigation": "^3.6.0",
+    "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.1.1"
   },
   "private": true
 }
