--- a/project/package.json
+++ b/project/package.json
@@ -7,8 +7,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.6",
     "axios": "^0.18.0",
+    "expo": "^32.0.6",
     "faker": "^4.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
@@ -16,9 +16,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^1.1.0",
-    "react-native-reanimated": "^1.0.0-alpha.12",
     "react-native-notifications": "^1.3.0",
     "react-native-push-notification": "^3.1.2",
+    "react-native-reanimated": "^1.0.0-alpha.12",
     "react-native-settings-list": "^1.8.0",
     "react-native-slideable-calendar-strip": "^0.3.2",
     "react-native-swipe-gestures": "^1.0.3",
@@ -31,7 +31,8 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^5.1.1",
+    "schedule": "^0.4.0"
   },
   "private": true
 }
