--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
     "faker": "^4.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "native-base": "^2.8.2",
     "react": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
